Bug 49587 - FILEOPEN particular .rtf causes HANG
Summary: FILEOPEN particular .rtf causes HANG
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.5 release
Hardware: All All
: medium major
Assignee: Caolán McNamara
URL:
Whiteboard: target:3.7.0 target:3.6.5
Keywords: regression
: 57767 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-05-07 07:19 UTC by z1949
Modified: 2012-12-12 15:45 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
an rtf doc that hangs Writer (19.68 KB, application/rtf)
2012-05-07 07:19 UTC, z1949
Details

Note You need to log in before you can comment on or make changes to this bug.
Description z1949 2012-05-07 07:19:48 UTC
Created attachment 61139 [details]
an rtf doc that hangs Writer

A doc file hangs Writer any way I try to load it. It loads fine in MS Word.
Example attached.
Comment 1 Rainer Bielefeld Retired 2012-05-07 22:04:26 UTC
[Reproducible] with "LibreOffice 3.5.3.2 (RC2) German UI/Locale [Build-ID: 235ab8a-3802056-4a8fed3-2d66ea8-e241b80] on German WIN7 Home Premium (64bit) and 3.4.5.

Still a problem with parallel installation of Master "LOdev 3.6.0alpha0+  – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 35ec153]" (tinderbox: Win-x86@6-fast, pull time 2012-05-02 06:53:41)

Worked fine with LibO 3.3.3, so Regression

@z1949@hotmail.com:
Please add information concerning your Operating System!

@Miklós:
Please set Status to ASSIGNED and add yourself to "Assigned To" if you accept this Bug
Comment 2 z1949 2012-05-08 05:51:33 UTC
Detected: LibreOffice 3.5.3.2 Build ID: 350m1(Build:2),
          Ubuntu 12.04 LTS
Comment 3 Caolán McNamara 2012-07-05 13:42:43 UTC
looks like an apparent loop in the styles, parent of a given style is itself.

caolanm->vmiklos: worth cherry-picking this fix to 3-5/3-6 ?
Comment 4 Not Assigned 2012-07-05 13:47:48 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7e3923520c27ff139bc3abab35a1c01e1a785fb1

Resolves: fdo#49587 apparent loop in style hierarchy
Comment 5 Michael Stahl 2012-12-12 15:41:30 UTC
*** Bug 57767 has been marked as a duplicate of this bug. ***
Comment 6 Not Assigned 2012-12-12 15:45:06 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8454a88e1818fa498c6860a2db434ad51591257c&g=libreoffice-3-6

Resolves: fdo#49587 apparent loop in style hierarchy


It will be available in LibreOffice 3.6.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.