Resolves: fdo#49587 apparent loop in style hierarchy

Change-Id: I32317a1a6500377f7e7bb98d1dcc65ad86feb9a2
(cherry picked from commit 7e3923520c27ff139bc3abab35a1c01e1a785fb1)

Signed-off-by: Michael Stahl <mstahl@redhat.com>